# utils

./: .gitignore  LICENSE  README.md  __init__.py  cdataset.py  clogging.py  cpolars.py  cprint.py  cstats.py  ctorch.py  dataframe.py  mp_sync.py  parser.py
.github/workflows/: build-docs.yml
cpolars/: __init__.py  collections.py  dataset.py  expr.py  helpers.py  inspect.py  preprocess.py
ctorch/: __init__.py  device.py  dist.py  functional.py  metrics.py  nn.py  ops.py  padding.py  rl.py  uplift.py
ctorch/nn/: __init__.py  conv.py  embedding.py  glm.py  linear.py  module.py  prob.py  transformer.py
ctorch/rec/: Cargo.toml  __init__.py
ctorch/rec/src/: lib.rs
ctorch/rl/: __init__.py  async_env.py  data.py  interface.py  model.py  parallel.py  replaybuffer.py
custom_email/: elogging.py  exit.py
custom_email/templates/: exit.html.j2  logging.html.j2
doc/: requirements.txt
doc/source/: conf.py  index.rst  utils.ctorch.rst  utils.sampler.rst
sampler/: Cargo.toml  __init__.py  build.rs  negsampler.py  negsampler.pyi  point_process.py  pyproject.toml
sampler/src/: lib.rs
scripts/: gather.sh  run_nb.py  taskq.sh
test/: test_cstats.py  test_ctorch.py  test_metrics.py  test_parser.py  test_sampler.py
test/test_ctorch/: test_functional.py  test_metrics.py  test_nn.py  test_padding.py
test/test_sampler/: __init__.py  test_negsampler.py  test_point_process.py
trainer/: __init__.py  hooks.py  logdb.py
trainer/hooks/: __init__.py  bootstrap.py  ckpt.py  debug.py  evaluation.py  hpo.py  rl.py  trace.py  train.py
