[package]
name = "_rs_sampler"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rayon = "1.10.0"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3"] }
rand = "0.9.1"
numpy = "0.25.0"
once_cell = "1.21.3"
ordered-float = "5.0.0"

[lib]
name = "_rs_sampler"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.25.1"
